--- a/client/style.css
+++ b/client/style.css
@@ -64,21 +64,25 @@ textarea {
 
 .delete {
   position: relative;
-  left: 625px;
-  width: 45px;
+  text-align: right;
+  margin-left: 615px;
 }
 
 .newDelete {
   width: 45px;
 }
 
-.toggleFadeIn {
+.presenter {
+  margin-bottom: 15px;
+}
+
+/*.toggleFadeIn {
   animation-duration: 2s;
   animation-name: fadeIn;
   opacity: 1;
-}
+}*/
 .toggleFadeOut {
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-name: fadeOut;
   opacity: .3;
 }
@@ -94,9 +98,18 @@ textarea {
 
 @keyframes fadeIn {
   from {
-    opacity: .3;
+    opacity: .2;
   }
   to {
     opacity: 1;
   }
+}
+
+.disable-text-selection {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
